fixed mouse alignment for participant whiteboard

--- a/src/WebRTC/board.css
+++ b/src/WebRTC/board.css
@@ -1,7 +1,7 @@
 .whiteboard {
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
